test/files/neg/macro-invalidsig-tparams-notparams-a.check
Macros_Test_2.scala:2: error: macro implementation reference needs type arguments
  def foo = macro Impls.foo
                        ^
one error found
